<resources>
    <string name="app_name">Tealium Kotlin Example</string>
    <string name="track">Track</string>
    <string name="consented">Consented</string>
    <string name="not_consented">Not Consented</string>
    <string name="unknown">Unknown</string>
    <string name="reset_consent">Reset</string>
    <string name="module_name">Module Name</string>
    <string name="fetch_profile">Fetch Profile</string>
    <string name="fetch_engine_response">Fetch Engine Response</string>
    <string name="engine_id">Enter Engine ID</string>
    <string name="visitor_profile">Visitor Profile</string>
    <string name="kill_trace">Kill Trace</string>
    <string name="track_item">Track Item</string>
    <string name="interfaces">Interfaces</string>
    <string name="messengers">Messengers</string>
    <string name="categories">Categories</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="timed_events_status_template_start">%s: Timer Started</string>
    <string name="timed_events_status_template_stop">%s: Timer Stopped (%d seconds)</string>
    <string name="timed_events_stop">Stop Timer</string>
    <string name="timed_events_start">Start Timer</string>
    <string name="timed_events_event_name_hint">Timed Event Name</string>
    <string name="timed_events_no_events">No Timed Event Running</string>
    <string name="create_crash">Create Crash</string>
    <string name="purchase">Trigger Purchase</string>

    <string name="media_start">Start Media Tracking Session</string>
    <string name="media_adbreak_start">Start Ad Break</string>
    <string name="media_adbreak_end">End Ad Break</string>
    <string name="media_ad_start">Start Ad</string>
    <string name="media_ad_end">End Ad</string>
    <string name="media_chapter_start">Start Chapter</string>
    <string name="media_chapter_end">End Chapter</string>
    <string name="media_end">End Media Session</string>

    <string name="second_activity">Second Activity</string>
    <string name="second_activity_text_view">Second Activity</string>
    <string name="third_activity">Third Activity</string>
    <string name="third_activity_text_view">Third Activity</string>
    <string name="hint_identity">Identity</string>
    <string name="btn_identify">Identify</string>
    <string name="visitor_id_label">Visitor Id:</string>
    <string name="visitor_id_placeholder"><![CDATA[<visitor id>]]></string>
    <string name="moments_api_audiences_label">Audiences:</string>
    <string name="moments_engine_response_audiences_placeholder"><![CDATA[Loading…]]></string>
    <string name="moments_api_badges_label">Badges:</string>
    <string name="moments_engine_response_badges_placeholder"><![CDATA[Loading…]]></string>
    <string name="moments_api_strings_label">Strings:</string>
    <string name="moments_engine_response_strings_placeholder"><![CDATA[Loading…]]></string>
    <string name="moments_api_numbers_label">Numbers:</string>
    <string name="moments_engine_response_numbers_placeholder"><![CDATA[Loading…]]></string>
    <string name="moments_api_booleans_label">Booleans:</string>
    <string name="moments_engine_response_booleans_placeholder"><![CDATA[Loading…]]></string>
    <string name="moments_api_dates_label">Dates:</string>
    <string name="moments_engine_response_dates_placeholder"><![CDATA[Loading…]]></string>

</resources>
