<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/edit_engine_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/engine_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/fetchEngineResponseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/fetch_engine_response"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_engine_id"/>

    <TextView
        android:id="@+id/txt_audiences_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/moments_api_audiences_label"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fetchEngineResponseButton" />

    <TextView
        android:id="@+id/txt_audiences_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/moments_engine_response_audiences_placeholder"
        android:visibility="invisible"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="450sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toEndOf="@+id/txt_audiences_label"
        app:layout_constraintTop_toBottomOf="@id/fetchEngineResponseButton" />

    <TextView
        android:id="@+id/txt_badges_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/moments_api_badges_label"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_audiences_label" />

    <TextView
        android:id="@+id/txt_badges_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/moments_engine_response_badges_placeholder"
        android:visibility="invisible"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="450sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toEndOf="@+id/txt_badges_label"
        app:layout_constraintTop_toBottomOf="@id/txt_audiences_placeholder" />

    <TextView
        android:id="@+id/txt_strings_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/moments_api_strings_label"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_badges_label" />

    <TextView
        android:id="@+id/txt_strings_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/moments_engine_response_strings_placeholder"
        android:visibility="invisible"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="450sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toEndOf="@+id/txt_strings_label"
        app:layout_constraintTop_toBottomOf="@id/txt_badges_placeholder" />

    <TextView
        android:id="@+id/txt_numbers_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/moments_api_numbers_label"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_strings_label" />

    <TextView
        android:id="@+id/txt_numbers_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/moments_engine_response_numbers_placeholder"
        android:visibility="invisible"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="450sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toEndOf="@+id/txt_numbers_label"
        app:layout_constraintTop_toBottomOf="@id/txt_strings_placeholder" />

    <TextView
        android:id="@+id/txt_booleans_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/moments_api_booleans_label"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_numbers_label" />

    <TextView
        android:id="@+id/txt_booleans_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/moments_engine_response_booleans_placeholder"
        android:visibility="invisible"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="450sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toEndOf="@+id/txt_booleans_label"
        app:layout_constraintTop_toBottomOf="@id/txt_numbers_placeholder" />

    <TextView
        android:id="@+id/txt_dates_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/moments_api_dates_label"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_booleans_label" />

    <TextView
        android:id="@+id/txt_dates_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/moments_engine_response_dates_placeholder"
        android:visibility="invisible"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="450sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toEndOf="@+id/txt_dates_label"
        app:layout_constraintTop_toBottomOf="@id/txt_booleans_placeholder" />

</androidx.constraintlayout.widget.ConstraintLayout>