<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_timed_event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/timed_events_event_name_hint"
        android:text=""
        android:inputType="text"
        android:layout_margin="8dp"
        android:padding="8dp"/>

    <Button
        android:id="@+id/button_trigger_timed_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timed_events_start"
        android:layout_margin="8dp"
        android:padding="8dp"
        />

    <TextView
        android:id="@+id/txt_timed_event_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timed_events_no_events"
        android:layout_margin="8dp"
        android:padding="8dp"
        />

</LinearLayout>